0032220: Configuration, Aspect_VKeySet - eliminate name collision with X11 macros

Aspect_VKeySet::KeyState::Status field has been renamed to KStatus.